[package]
name = "rustycog"
version = "0.1.0"
edition = "2024"
description = "A syncrhonous task manager"
repository = "https://www.github.com/Huggepugge1/RustyCog"
license-file = "LICENSE"

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "engage"
harness = false

[[bench]]
name = "retrieve"
harness = false

[profile.bench]
debug = true
